<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="hu.uniobuda.nik.potatoe.OptionsActivity">

    <TextView android:text="@string/Difficulty" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvOptions"
        />
    <RadioGroup
        android:layout_below="@+id/tvOptions"
        android:id="@+id/rbDifficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <RadioButton
        android:id="@+id/rbEasy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Easy"
        android:checked="true"
        />

        <RadioButton
            android:id="@+id/bnNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Normal"
            />

        <RadioButton
            android:id="@+id/bnHard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Hard"
            />

    </RadioGroup>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:layout_alignParentBottom="true"
        android:id="@+id/linearLayout">


        <Button
            android:id="@+id/bnOk"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:layout_weight="1"/>



    <Button
        android:id="@+id/bnCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Cancel"
        android:layout_weight="1"
        android:layout_toRightOf="@+id/linearLayout"
 />
    </LinearLayout>
</RelativeLayout>
